--- a/BlazorAppWeb/Pages/Index.razor
+++ b/BlazorAppWeb/Pages/Index.razor
@@ -32,7 +32,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
 
-                <EditForm  OnInvalidSubmit="@RegisterForm">
+                <EditForm  Model="model" OnInvalidSubmit="@RegisterForm">
 
                     <div class="modal-header">
                         <h5 class="modal-title">Modal title</h5>
