--- a/BlazorAppWeb/_Imports.razor
+++ b/BlazorAppWeb/_Imports.razor
@@ -5,4 +5,10 @@
 @using BlazorAppWeb.Pages
 @using BlazorAppWeb.Shared
 @using BlazorAppWeb
+@using BlazorProvider.Models
+@using BlazorProvider.Data
+@using BlazorProvider.Provider
+@using BlazorProvider.Repositories
+@using BlazorProvider.RepositoriesInterfaces
+@using Microsoft.AspNetCore.Components.Web
 
